# snake-game

./: CMakeLists.txt  README.md  main.cpp
src/console/: Console.cpp  Console.h
src/food/: Food.cpp  Food.h
src/game/: Game.cpp  Game.h
src/snake/: Snake.cpp  Snake.h
src/utils/: Config.h  Utility.cpp  Utility.h
